--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Chingu Tier 1: Website Template</title>
   </head>
   <body>
+    <!-- Navigation Section -->
     <nav>
         <ul>
             <li>Homepage</li>
@@ -16,8 +17,6 @@
     </nav>
     <!-- Header Section -->
     <header>
-        <h1>Chingu Tier 1 Pre-Work Challenge!</h1>
-        <h4>Built Without Boostrap and jQuery</h4>
     </header>
     <!-- Feature Section -->
     <section></section>
