Add main header text

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </nav>
     <!-- Header Section -->
     <header>
+        <h1>Chingu Tier 1 Pre-Work Challenge!</h1>
+        <h4>Built Without Boostrap and jQuery</h4>
     </header>
     <!-- Feature Section -->
     <section></section>
