--- a/index.html
+++ b/index.html
@@ -94,8 +94,14 @@
     <!-- Contact Section -->
     <section>
         <h2>Contact Form</h2>
-        <p></p>
-        <button>Send</button>
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <form action="">
+            <input type="text" name="name" placeholder="Name">
+            <input type="email" name="email" placeholder="Email">
+            <input type="text" name="subject" placeholder="Subject">
+            <textarea name="message" id="" cols="30" rows="10" placeholder="Your message here..."></textarea>
+            <button>Send</button>
+        </form>        
     </section>
     <footer></footer>
   </body>
