Add footer content

--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
             <button>Send</button>
         </form>        
     </section>
-    <footer></footer>
+    <footer>
+        <h1>Use it free!</h1>
+        <p>"Website template by lghtaprexp.
+            <br>
+            No backlink is required to use this layout."
+        </p>
+        <p>Copyright © 2019 Your Company Name | Design: lghtaprexp</p>
+    </footer>
   </body>
 </html>
