--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
   <head>
     <meta charset="UTF-8">
     <title>Chingu Tier 1: Website Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Navigation Section -->
-    <nav>
+    <nav class="navbar">
         <ul>
-            <li>Homepage</li>
-            <li>About Us</li>
-            <li>Services</li>
-            <li>Contact</li>
-            <li>External</li>
+            <li>
+                <a href="">Homepage</a>
+            </li>
+            <li>
+                <a href="">About Us</a>
+            </li>
+            <li>
+                <a href="">Services</a>
+            </li>
+            <li>
+                <a href="">Contact</a>
+            </li>
+            <li>
+                <a href="">External</a>
+            </li>
         </ul>
     </nav>
     <!-- Header Section -->
