Add header style

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </ul>
     </nav>
     <!-- Header Section -->
-    <header>
+    <header class="header">
         <h1>Chingu Tier 1 Pre-Work Challenge!</h1>
-        <h4>Built Without Boostrap and jQuery</h4>
+        <h4>Built without Boostrap and jQuery</h4>
     </header>
     <!-- Feature Section -->
     <section>
